<resources>
    <string name="app_name">Shijing</string>
    <string name="action_settings">Settings</string>
    <string name="action_random">Random</string>
    <string name="action_contents">Contents</string>
    <string name="action_exit">Exit</string>
    <string name="action_search">Search</string>
    <string name="db_name" translatable="false">shijing.db</string>
    <string name="title_activity_poet_view" translatable="false">PoetViewActivity</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="large_text">
    This project is open source and follow the MIT licence.\n\n
    GitHub: https://github.com/shizuku\n\n
    Text data from project chinese-poetry（https://github.com/chinese-poetry/chinese-poetry），thanks sincerely。\n\n
    </string>
    <string name="title_activity_contents">Contents</string>

</resources>
