<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <TextView
        android:id="@+id/text_contents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_contents"
        android:textSize="@dimen/fonts_size"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  "
        android:textSize="@dimen/blank_size"/>
    <TextView
        android:id="@+id/text_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_random"
        android:textSize="@dimen/fonts_size"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  "
        android:textSize="@dimen/blank_size"/>
    <TextView
        android:id="@+id/text_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_search"
        android:textSize="@dimen/fonts_size"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  "
        android:textSize="@dimen/blank_size"/>
    <TextView
        android:id="@+id/text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:textSize="@dimen/fonts_size"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  "
        android:textSize="@dimen/blank_size"/>
    <TextView
        android:id="@+id/text_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_about"
        android:textSize="@dimen/fonts_size"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  "
        android:textSize="@dimen/blank_size"/>
    <TextView
        android:id="@+id/text_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_exit"
        android:textSize="@dimen/fonts_size"/>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>